main page title change

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <body>
     <script></script>
-    <h1>Diga aos jogadores que sou um jogador</h1>
+    <h1>Eu me recuso a ser o coco</h1>
 </body>
 </html>
